--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "bugs": {
     "url": "https://github.com/AwesomeCore/core-javascript/issues"
   },
-  "homepage": "https://github.com/AwesomeCore/core-javascript#readme"
+  "homepage": "https://github.com/AwesomeCore/core-javascript#readme",
+  "devDependencies": {
+    "mocha": "^3.2.0"
+  }
 }
