--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "example": "examples"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node ./node_modules/mocha/bin/mocha --opts _tests/mocha.opts"
   },
   "repository": {
     "type": "git",
@@ -21,7 +21,7 @@
   "bugs": {
     "url": "https://github.com/AwesomeCore/core-javascript/issues"
   },
-  "homepage": "https://github.com/AwesomeCore/core-javascript#readme",
+  "homepage": "https://github.com/extremeprog-com/core",
   "devDependencies": {
     "mocha": "^3.2.0"
   }
