--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "bugs": {
     "url": "https://github.com/AwesomeCore/core-javascript/issues"
   },
-  "homepage": "https://github.com/AwesomeCore/core-javascript#readme"
+  "homepage": "https://github.com/AwesomeCore/core-javascript#readme",
+  "dependencies": {
+    "angular": "^1.6.3"
+  }
 }
